GiRaFFE/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb: Added the Python module. Added more code comments and adjusted both tutorials to use the new module.

--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The last things NRPy+ will require are the definition of type `REAL` and, of course, the functions we are testing. These files should be generated on the fly, but we'll not do that until there are far fewer changes to be made in the notebook."
+    "The last things NRPy+ will require are the definition of type `REAL` and, of course, the functions we are testing. These files are generated on the fly."
    ]
   },
   {
@@ -117,13 +117,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
+    "from outputC import *            # NRPy+: Core C code output module\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import loop as lp                # NRPy+: Generate C code loops\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
+    "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
+    "\n",
+    "out_dir  = \"Validation\"\n",
+    "cmd.mkdir(out_dir)\n",
+    "\n",
+    "import GiRaFFE_HO.GiRaFFE_NRPy_Ccode_library_Stilde_flux as stflux\n",
+    "# Let's also add some standard NRPy+ macros here. We can also use IDX3 here\n",
+    "# to define and index that we'll keep reusing.\n",
+    "Stilde_flux_string_pre = \"\"\"\n",
+    "//-----------------------------------------------------------------------------\n",
+    "// Compute the flux for advecting S_i .\n",
+    "//-----------------------------------------------------------------------------\n",
+    "static inline void GRFFE__S_i__flux(const int i0,const int i1,const int i2, REAL *auxevol_gfs) {\n",
+    "\n",
+    "  int idx = IDX3(i0,i1,i2);\n",
+    "\"\"\"\n",
+    "\n",
+    "# We'll need a post-string as well to close the function.\n",
+    "Stilde_flux_string_post = \"\"\"\n",
+    "}\n",
+    "\"\"\"\n",
+    "# And now, we'll write the files\n",
+    "DIM = 3\n",
+    "for flux_dirn in range(DIM):\n",
+    "    out_string_NRPy = Stilde_flux_string_pre.replace(\"GRFFE__S_i__flux\",\"GRFFE__S_\"+str(flux_dirn)+\"__flux\")\n",
+    "    # Function call goes here\n",
+    "    stflux.Stilde_fluxD = stflux.calculate_Stilde_flux(flux_dirn,stflux.Stilde_fluxD)\n",
+    "    Stilde_flux_to_print   = [\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Stilde_fluxD0\"),rhs=stflux.Stilde_fluxD[0]),\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Stilde_fluxD1\"),rhs=stflux.Stilde_fluxD[1]),\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Stilde_fluxD2\"),rhs=stflux.Stilde_fluxD[2]),\\\n",
+    "                             ]\n",
+    "    Stilde_flux_kernel = fin.FD_outputC(\"returnstring\",Stilde_flux_to_print,params=\"outCverbose=False\")\n",
+    "    out_string_NRPy += Stilde_flux_kernel\n",
+    "    out_string_NRPy += Stilde_flux_string_post\n",
+    "    with open(os.path.join(out_dir,\"GRFFE__S_\"+str(flux_dirn)+\"__flux.C\"), \"w\") as file:\n",
+    "        file.write(out_string_NRPy)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "out_string += \"\"\"\n",
     "// The NRPy+ versions of the function. These should require relatively little modification.\n",
     "// We will need this define, though:\n",
     "#define REAL double\n",
-    "#include \"../PPM/GRFFE__S_0__flux.C\"\n",
-    "#include \"../PPM/GRFFE__S_1__flux.C\"\n",
-    "#include \"../PPM/GRFFE__S_2__flux.C\"\n",
+    "#include \"GRFFE__S_0__flux.C\"\n",
+    "#include \"GRFFE__S_1__flux.C\"\n",
+    "#include \"GRFFE__S_2__flux.C\"\n",
     "\n",
     "\"\"\""
    ]
@@ -137,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,23 +217,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# First download the original IllinoisGRMHD source code\n",
-    "import os,sys\n",
-    "nrpy_dir_path = os.path.join(\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
-    "\n",
     "import urllib\n",
-    "import os\n",
-    "import cmdline_helper as cmd\n",
-    "\n",
-    "out_dir  = \"Validation\"\n",
-    "cmd.mkdir(out_dir)\n",
-    "\n",
     "original_file_url  = [\"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/GiRaFFE/src/GiRaFFE_headers.h\",\\\n",
     "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/GiRaFFE/src/inlined_functions.C\",\\\n",
     "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/GiRaFFE/src/GRFFE__S_i__flux.C\"\\\n",
@@ -216,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,9 +286,10 @@
     "    CCTK_REAL st_x_flux; CCTK_REAL st_y_flux; CCTK_REAL st_z_flux;\n",
     "    \n",
     "    // Now, it's time to make the random numbers.\n",
-    "    const long int seed = 1570632212;//time(NULL);\n",
-    "    //srand(seed); // Set the seed\n",
-    "    printf(\"seed = %ld\\\\n\",seed);\n",
+    "    const long int seed = time(NULL); // seed = 1570632212; is an example of a seed that produces\n",
+    "                                      // bad agreement for high speeds \n",
+    "    srand(seed); // Set the seed\n",
+    "    printf(\"seed for random number generator = %ld; RECORD IF AGREEMENT IS BAD\\\\n\\\\n\",seed);\n",
     "    // We take care to make sure the corresponding quantities have the SAME value.\n",
     "    auxevol_gfs[IDX4(ALPHA_FACEGF, i0,i1,i2)] = (double)rand()/RAND_MAX;\n",
     "    const double alpha = auxevol_gfs[IDX4(ALPHA_FACEGF, i0,i1,i2)];\n",
@@ -328,19 +376,20 @@
     "    const double betaz = auxevol_gfs[IDX4(BETA_FACEU2GF, i0,i1,i2)];\n",
     "    FACEVAL[SHIFTZ] = betaz;\n",
     "    \n",
-    "    /*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
+    "    /* Generate physically meaningful speeds */\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)]-betax;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)]-betay;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
-    "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;*/\n",
-    "    /* Near-luminal */\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
+    "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;\n",
+    "    /* Superluminal speeds for testing */\n",
+    "    /*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
     "    Ur[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)]-betax;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
     "    Ur[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)]-betay;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
-    "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;\n",
+    "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;*/\n",
     "    \n",
     "    auxevol_gfs[IDX4(B_RU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[BX_CENTER] = auxevol_gfs[IDX4(B_RU0GF, i0,i1,i2)];\n",
@@ -349,19 +398,20 @@
     "    auxevol_gfs[IDX4(B_RU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[BZ_CENTER] = auxevol_gfs[IDX4(B_RU2GF, i0,i1,i2)];\n",
     "    \n",
-    "    /*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
+    "    /* Generate physically meaningful speeds */\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)]-betax;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)]-betay;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
-    "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;*/\n",
-    "    /* Near-luminal */\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
+    "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;\n",
+    "    /* Superluminal speeds for testing */\n",
+    "    /*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
     "    Ul[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)]-betax;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
     "    Ul[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)]-betay;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
-    "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;\n",
+    "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;*/\n",
     "    \n",
     "    auxevol_gfs[IDX4(B_LU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[BX_CENTER] = auxevol_gfs[IDX4(B_LU0GF, i0,i1,i2)];\n",
@@ -371,26 +421,37 @@
     "    Ul[BZ_CENTER] = auxevol_gfs[IDX4(B_LU2GF, i0,i1,i2)];\n",
     "    \n",
     "    \n",
-    "    printf(\"NRPy+ speeds: %.4e, %.4e, %.4e, %.4e, %.4e, %.4e\\\\n\",auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]);\n",
-    "    printf(\"ETK   speeds: %.4e, %.4e, %.4e, %.4e, %.4e, %.4e\\\\n\\\\n\",Ur[VX],Ur[VY],Ur[VZ],Ul[VX],Ul[VY],Ul[VZ]);\n",
+    "    printf(\"Valencia 3-velocity (right): %.4e, %.4e, %.4e\\\\n\",auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]);\n",
+    "    printf(\"Valencia 3-velocity (left):  %.4e, %.4e, %.4e\\\\n\\\\n\",auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]);\n",
+    "    printf(\"Below are the numbers we care about. These are the Significant Digits of Agreement \\\\n\");\n",
+    "    printf(\"between the HLLE fluxes computed by NRPy+ and ETK. Each row represents a flux \\\\n\");\n",
+    "    printf(\"direction; each entry therein corresponds to a component of StildeD. Each pair \\\\n\\\\n\");\n",
+    "    printf(\"of outputs should show at least 10 significant digits of agreement. \\\\n\\\\n\");\n",
     "    // Now, we'll run the NRPy+ and ETK functions, once in each flux_dirn.\n",
     "    // We'll compare the output in-between each \n",
     "    GRFFE__S_0__flux(0,0,0, auxevol_gfs);\n",
     "    GRFFE__S_i__flux(0,0,0,1,Ul,Ur,FACEVAL,METRIC_LAP_PSI4,cmax,cmin,st_x_flux,st_y_flux,st_z_flux); \n",
-    "    printf(\"NRPy+ Results: %.16e, %.16e, %.16e\\\\n\",auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)],auxevol_gfs[IDX4(STILDE_FLUXD1GF, i0,i1,i2)],auxevol_gfs[IDX4(STILDE_FLUXD2GF, i0,i1,i2)]);\n",
-    "    printf(\"ETK   Results: %.16e, %.16e, %.16e\\\\n\\\\n\",st_x_flux,st_y_flux,st_z_flux);\n",
-    "    \n",
+    "    printf(\"SDA: %.1f, %.1f, %.1f\\\\n\",1.0-log10(2.0*fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)]-st_x_flux)/(fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
+    "                                         1.0-log10(2.0*fabs(auxevol_gfs[IDX4(STILDE_FLUXD1GF, i0,i1,i2)]-st_y_flux)/(fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
+    "                                         1.0-log10(2.0*fabs(auxevol_gfs[IDX4(STILDE_FLUXD2GF, i0,i1,i2)]-st_z_flux)/(fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)])+fabs(st_x_flux))));\n",
+    "\n",
     "    GRFFE__S_1__flux(0,0,0, auxevol_gfs);\n",
     "    GRFFE__S_i__flux(0,0,0,2,Ul,Ur,FACEVAL,METRIC_LAP_PSI4,cmax,cmin,st_x_flux,st_y_flux,st_z_flux);    \n",
-    "    printf(\"NRPy+ Results: %.16e, %.16e, %.16e\\\\n\",auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)],auxevol_gfs[IDX4(STILDE_FLUXD1GF, i0,i1,i2)],auxevol_gfs[IDX4(STILDE_FLUXD2GF, i0,i1,i2)]);\n",
-    "    printf(\"ETK   Results: %.16e, %.16e, %.16e\\\\n\\\\n\",st_x_flux,st_y_flux,st_z_flux);\n",
-    "\n",
+    "    printf(\"SDA: %.1f, %.1f, %.1f\\\\n\",1.0-log10(2.0*fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)]-st_x_flux)/(fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
+    "                                         1.0-log10(2.0*fabs(auxevol_gfs[IDX4(STILDE_FLUXD1GF, i0,i1,i2)]-st_y_flux)/(fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
+    "                                         1.0-log10(2.0*fabs(auxevol_gfs[IDX4(STILDE_FLUXD2GF, i0,i1,i2)]-st_z_flux)/(fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)])+fabs(st_x_flux))));\n",
     "    \n",
     "    GRFFE__S_2__flux(0,0,0, auxevol_gfs);\n",
     "    GRFFE__S_i__flux(0,0,0,3,Ul,Ur,FACEVAL,METRIC_LAP_PSI4,cmax,cmin,st_x_flux,st_y_flux,st_z_flux);    \n",
-    "    printf(\"NRPy+ Results: %.16e, %.16e, %.16e\\\\n\",auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)],auxevol_gfs[IDX4(STILDE_FLUXD1GF, i0,i1,i2)],auxevol_gfs[IDX4(STILDE_FLUXD2GF, i0,i1,i2)]);\n",
-    "    printf(\"ETK   Results: %.16e, %.16e, %.16e\\\\n\\\\n\",st_x_flux,st_y_flux,st_z_flux);\n",
+    "    printf(\"SDA: %.1f, %.1f, %.1f\\\\n\",1.0-log10(2.0*fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)]-st_x_flux)/(fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
+    "                                         1.0-log10(2.0*fabs(auxevol_gfs[IDX4(STILDE_FLUXD1GF, i0,i1,i2)]-st_y_flux)/(fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
+    "                                         1.0-log10(2.0*fabs(auxevol_gfs[IDX4(STILDE_FLUXD2GF, i0,i1,i2)]-st_z_flux)/(fabs(auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)])+fabs(st_x_flux))));\n",
+    "    \n",
+    "    printf(\"Note that in the case of very high velocities, numerical error will accumulate \\\\n\");\n",
+    "    printf(\"and reduce agreement significantly due to a catastrophic cancellation. \\\\n\\\\n\");\n",
     "\n",
+    "    /*printf(\"NRPy+ Results: %.16e, %.16e, %.16e\\\\n\",auxevol_gfs[IDX4(STILDE_FLUXD0GF, i0,i1,i2)],auxevol_gfs[IDX4(STILDE_FLUXD1GF, i0,i1,i2)],auxevol_gfs[IDX4(STILDE_FLUXD2GF, i0,i1,i2)]);\n",
+    "    printf(\"ETK   Results: %.16e, %.16e, %.16e\\\\n\\\\n\",st_x_flux,st_y_flux,st_z_flux);*/\n",
     "}\n",
     "\"\"\""
    ]
@@ -404,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -437,27 +498,31 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "Finished executing in 0.4121997356414795 seconds.\n",
+      "Finished executing in 0.425387144089 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.421466588973999 seconds.\n",
+      "Finished in 0.444015026093 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "seed = 1570632212\n",
-      "NRPy+ speeds: 5.2966e+00, 6.6598e+00, 4.2831e+00, 6.7214e+00, 7.4557e+00, 2.2744e+00\n",
-      "ETK   speeds: 3.9137e+00, 6.0400e+00, 3.4906e+00, 5.1108e+00, 6.7086e+00, 1.8030e+00\n",
+      "seed for random number generator = 1571173526; RECORD IF AGREEMENT IS BAD\n",
       "\n",
-      "NRPy+ Results: 3.1564839773792069e-02, 1.6535228589758008e-03, 2.8679105228419152e-03\n",
-      "ETK   Results: 3.1564839773737585e-02, 1.6535228589062000e-03, 2.8679105227977005e-03\n",
+      "Valencia 3-velocity (right): 9.3836e-01, 8.2173e-01, 1.7180e-01\n",
+      "Valencia 3-velocity (left):  9.4729e-01, 4.6427e-01, -6.2766e-02\n",
       "\n",
-      "NRPy+ Results: 4.2071891844922292e-02, 2.1162206393392467e-03, -1.7540985695883020e-02\n",
-      "ETK   Results: 4.2071891844966229e-02, 2.1162206393929698e-03, -1.7540985695873767e-02\n",
+      "Below are the numbers we care about. These are the Significant Digits of Agreement \n",
+      "between the HLLE fluxes computed by NRPy+ and ETK. Each row represents a flux \n",
+      "direction; each entry therein corresponds to a component of StildeD. Each pair \n",
       "\n",
-      "NRPy+ Results: -1.0092747988585468e-02, -2.6961744485427527e-02, 1.3459561641285190e-02\n",
-      "ETK   Results: -1.0092747988619949e-02, -2.6961744485470913e-02, 1.3459561641253321e-02\n",
+      "of outputs should show at least 10 significant digits of agreement. \n",
       "\n",
-      "Finished in 0.11229515075683594 seconds.\n",
+      "SDA: 13.5, 13.5, 14.3\n",
+      "SDA: 13.4, 13.5, 14.4\n",
+      "SDA: 14.1, 14.6, 14.8\n",
+      "Note that in the case of very high velocities, numerical error will accumulate \n",
+      "and reduce agreement significantly due to a catastrophic cancellation. \n",
+      "\n",
+      "Finished in 0.0312600135803 seconds.\n",
       "\n",
       "\n"
      ]
@@ -479,32 +544,25 @@
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "# os.chdir(os.path.join(\"../\"))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
