--- a/Tutorial-ADM_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_Initial_Data-TOV.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -346,6 +346,7 @@
      "output_type": "stream",
      "text": [
       "(1051, 1051, 1051, 1051, 1051)\n",
+      "Just generated a TOV star with R_Schw = 0.956568142523 , M = 0.14050303285288188 , M/R_Schw = 0.1468824086931645 .\n",
       "TOV initial data test PASSED.\n"
      ]
     }
@@ -356,9 +357,10 @@
     "import filecmp\n",
     "\n",
     "import TOV.TOV_Solver as TOV\n",
-    "TOV.TOV_Solver(\"outputTOVpolytrope-validation.txt\",rho_baryon_central=0.129285, \\\n",
-    "               rho_poly_tab=[],Gamma_poly_tab=[2.0], K_poly_tab0=1.0, \\\n",
-    "               verbose = False)\n",
+    "TOV.TOV_Solver(eos,\n",
+    "               outfile=\"outputTOVpolytrope-validation.txt\", \\\n",
+    "               rho_baryon_central=0.129285,                 \\\n",
+    "               verbose = True)\n",
     "\n",
     "if filecmp.cmp('outputTOVpolytrope.txt',\n",
     "               'outputTOVpolytrope-validation.txt') == False:\n",
@@ -391,14 +393,74 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-TOV.ipynb to latex\n",
-      "[NbConvertApp] Writing 49990 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\n",
+      "Refer to http://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "[NbConvertApp] Writing 45723 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n"
      ]
@@ -429,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
