Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order: Output F-M data as well.

--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1645,6 +1645,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to file \"interp_arbgrid_MO_ETK/src/FM_Gamma__Gamma_times_Valenciavs_sphbasis.h\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1c: Call the FishboneMoncriefID() function from within the\n",
+    "#          FishboneMoncriefID/FishboneMoncriefID.py module.\n",
+    "import FishboneMoncriefID.FishboneMoncriefID as fmid\n",
+    "\n",
+    "old_glb_gridfcs_list = gri.glb_gridfcs_list\n",
+    "# Step 1: Set up the Fishbone-Moncrief initial data. This sets all the ID gridfunctions.\n",
+    "gri.glb_gridfcs_list = [] # Reset list of gridfunctions\n",
+    "fmid.FishboneMoncriefID(\"Spherical\")\n",
+    "gammaDD = ixp.zerorank2()\n",
+    "\n",
+    "DIM = 3\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        if i<=j:\n",
+    "            gammaDD[i][j] = fmid.IDgammaDD[i][j]\n",
+    "        else:\n",
+    "            gammaDD[i][j] = fmid.IDgammaDD[j][i]\n",
+    "\n",
+    "# gamma_{ij} v^i_{(n)} v^j_{(n)}\n",
+    "Gammacontraction = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        Gammacontraction += gammaDD[i][j] * fmid.IDValencia3velocityU[i] * fmid.IDValencia3velocityU[j]\n",
+    "\n",
+    "Gammafactor = sp.sqrt(1 / (1 - Gammacontraction))\n",
+    "\n",
+    "# -={ F-M quantities: Generate C code from expressions and output to file }=-\n",
+    "FishboneMoncrief_to_print = [\\\n",
+    "                     lhrh(lhs=\"Gammafactor\",rhs=Gammafactor),\\\n",
+    "                     lhrh(lhs=\"Gamma_times_ValenciavU0\",rhs=Gammafactor*fmid.IDValencia3velocityU[0]),\\\n",
+    "                     lhrh(lhs=\"Gamma_times_ValenciavU1\",rhs=Gammafactor*fmid.IDValencia3velocityU[1]),\\\n",
+    "                     lhrh(lhs=\"Gamma_times_ValenciavU2\",rhs=Gammafactor*fmid.IDValencia3velocityU[2]),\\\n",
+    "                     ]\n",
+    "fin.FD_outputC(\"interp_arbgrid_MO_ETK/src/FM_Gamma__Gamma_times_Valenciavs_sphbasis.h\",FishboneMoncrief_to_print,\n",
+    "               params=\"outCverbose=False,CSE_enable=True\")\n",
+    "\n",
+    "# Restore old gridfunctions list:\n",
+    "gri.glb_gridfcs_list = old_glb_gridfcs_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -1701,6 +1755,27 @@
     "    \n",
     "      // Perform interpolation only at iteration == interp_out_iteration:\n",
     "  if(cctk_iteration != interp_out_iteration) return;\n",
+    "  if(*InterpCounter == 0) {\n",
+    "      char filename[500];\n",
+    "      sprintf (filename, \"%s/FMvalidation_points.asc\", out_dir);\n",
+    "      FILE *file;\n",
+    "      file = fopen (filename,\"w\");\n",
+    "      printf(\"WRITING to file %s\\n\",filename);\n",
+    "\n",
+    "      for(int ir=0;ir<sph_Nr;ir++) for(int ith=0;ith<sph_Nth;ith++) for(int iph=0;iph<sph_Nph;iph++) {\n",
+    "        const CCTK_REAL xx0 = sph_rmin  + (CCTK_REAL)ir /((CCTK_REAL)sph_Nr ) * (sph_rmax - sph_rmin);\n",
+    "        const CCTK_REAL xx1 = sph_thmin + (CCTK_REAL)ith/((CCTK_REAL)sph_Nth) * (sph_thmax - sph_thmin);\n",
+    "        const CCTK_REAL xx2 = sph_phmin + (CCTK_REAL)iph/((CCTK_REAL)sph_Nph) * (sph_phmax - sph_phmin);\n",
+    "        const CCTK_REAL xx = xx0*sin(xx1)*cos(xx2);\n",
+    "        const CCTK_REAL yy = xx0*sin(xx1)*sin(xx2);\n",
+    "        const CCTK_REAL zz = xx0*cos(xx1);\n",
+    "        CCTK_REAL Gammafactor,Gamma_times_ValenciavU0,Gamma_times_ValenciavU1,Gamma_times_ValenciavU2;\n",
+    "#include \"FM_Gamma__Gamma_times_Valenciavs_sphbasis.h\"\n",
+    "        fprintf(file,\"%e %e %e %e %e %e %e\\n\",xx,yy,zz,\n",
+    "                Gamma_times_ValenciavU0,Gamma_times_ValenciavU1,Gamma_times_ValenciavU2,Gammafactor);\n",
+    "      }\n",
+    "      fclose(file);\n",
+    "  }\n",
     "  // Perform interpolation!\n",
     "  // Process zero (CCTK_MyProc(cctkGH)==0) is responsible for directing the interpolation.\n",
     "  //    All other processes must see the cctk_InterpGridArrays() within Interpolate_to_dest_grid(),\n",
@@ -1771,7 +1846,10 @@
     "      }\n",
     "      CCTK_INT pointcount = 0;\n",
     "      for(int ir=0;ir<sph_Nr;ir++) for(int ith=0;ith<sph_Nth;ith++) for(int iph=0;iph<sph_Nph;iph++) {\n",
-    "        fprintf(file,\"%e %e %e %e\\n\",points_x[pointcount],points_y[pointcount],points_z[pointcount],output_f[0][pointcount]);\n",
+    "        const CCTK_REAL xx = points_x[pointcount];\n",
+    "        const CCTK_REAL yy = points_y[pointcount];\n",
+    "        const CCTK_REAL zz = points_z[pointcount];\n",
+    "        fprintf(file,\"%e %e %e %e\\n\",xx,yy,zz,output_f[0][pointcount]);\n",
     "        pointcount++;\n",
     "      }\n",
     "      fclose(file);\n",
@@ -1828,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1882,6 +1960,8 @@
     "#   will rely on variables/function that exist within those\n",
     "#   functions. \n",
     "inherits:   admbase IllinoisGRMHD Grid\n",
+    "# For FM ID comparisons:\n",
+    "inherits:   FishboneMoncriefID\n",
     "\n",
     "# Tell the Toolkit that we want \"interped_gf\" and \"InterpCounter\"\n",
     "#    and invariants to NOT be visible to other thorns, by using \n",
@@ -1920,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1937,6 +2017,12 @@
     "# Output the interpolated data to the IO::out_dir directory:\n",
     "shares: IO\n",
     "USES STRING out_dir\n",
+    "\n",
+    "# For FM ID comparisons:\n",
+    "shares: FishboneMoncriefID\n",
+    "USES KEYWORD M\n",
+    "USES KEYWORD a\n",
+    "USES KEYWORD r_at_max_density\n",
     "\n",
     "restricted:\n",
     "    \n",
@@ -2014,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2251,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2259,7 +2345,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb to latex\n",
-      "[NbConvertApp] Writing 170470 bytes to Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
+      "[NbConvertApp] Writing 167802 bytes to Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
