Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order: Simplify F-M comparison logic a bit; debugging

--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -1751,7 +1751,8 @@
     "    const CCTK_REAL sph_phmin = 0;\n",
     "    const CCTK_REAL sph_phmax = 2.0*M_PI;\n",
     "    \n",
-    "      // Perform interpolation only at iteration == interp_out_iteration:\n",
+    "  // STEP 1: IF GAMMA*VALENCIA,PROCEED. IF RHO_B, OUTPUT FM FOR VEL DATA. ELSE RETURN.\n",
+    "  // Perform interpolation only at iteration == interp_out_iteration:\n",
     "  if(cctk_iteration != interp_out_iteration) return;\n",
     "  // Perform interpolation!\n",
     "  // Process zero (CCTK_MyProc(cctkGH)==0) is responsible for directing the interpolation.\n",
@@ -1760,12 +1761,9 @@
     "  //    Interpolate_to_dest_grid() with number of interpolated points set to zero, and\n",
     "  //    without needing a malloc().\n",
     "  char gf_name[100]; get_gf_name(*InterpCounter,gf_name);\n",
-    "  int num_interp_orders,*interp_orders_list;\n",
     "  // 4-metric & 4-Christoffels only output interpolation order==4.\n",
     "  if(strncmp(gf_name,\"Lorentz factor, times Valencia\",30) == 0) {\n",
-    "    num_interp_orders = 3;\n",
-    "    interp_orders_list = (int *)malloc(sizeof(int)*num_interp_orders);\n",
-    "    int count = 0; for(int order=1;order<=4;order*=2) { interp_orders_list[count] = order; count++; }\n",
+    "    // Do nothing.\n",
     "  } else if(strncmp(gf_name,\"IGM density primitive\",21) == 0) {\n",
     "      char filename[500];\n",
     "      sprintf (filename, \"%s/FMvalidation_points.asc\", out_dir);\n",
@@ -1801,6 +1799,7 @@
     "  const CCTK_STRING input_array_names[1] = { \"interp_arbgrid_MO_ETK::interped_gf\" };\n",
     "  CCTK_REAL *points_x,*points_y,*points_z,**output_f;\n",
     "\n",
+    "  // STEP 2: ALLOCATE INTERPOLATION ARRAYS SET INTERPOLATION POINT ARRAYS\n",
     "  int num_interp_points;\n",
     "  if(CCTK_MyProc(cctkGH)==0) {\n",
     "      // Step 1: Construct list of desired interpolation destination points:\n",
@@ -1819,11 +1818,11 @@
     "          points_y[pointcount] = r*sin(th)*sin(ph);\n",
     "          points_z[pointcount] = r*cos(th);\n",
     "          pointcount++;\n",
-    "      } // END for(int ir=0;ir<sph_Nr;ir++) for(int i...\n",
-    "  } // END if(CCTK_MyProc(cctkGH)==0) {\n",
-    "  // Step 1.d: Looping over interp order as desired, interpolate to destination points & output to file\n",
-    "  for(int order_i=0; order_i<num_interp_orders; order_i++) {\n",
-    "    int order = interp_orders_list[order_i];\n",
+    "      } // END for(int ir=0;ir<sph_Nr;ir++) for...\n",
+    "  } // END if(CCTK_MyProc(cctkGH)==0)\n",
+    "    \n",
+    "  // Step 3: Looping over interp order as desired, interpolate to destination points & output to file\n",
+    "  for(int order=1;order<=4;order*=2) {\n",
     "    printf(\"ASCII FM Validation: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
     "    if(CCTK_MyProc(cctkGH)==0) {\n",
     "        Interpolate_to_dest_grid(cctkGH, num_interp_points, order,\n",
@@ -1863,8 +1862,9 @@
     "        Interpolate_to_dest_grid(cctkGH, 0, order,\n",
     "                                 points_x,points_y,points_z, input_array_names, output_f);        \n",
     "    } // END if(CCTK_MyProc(cctkGH)==0)\n",
-    "  } // END for(int order_i=0; order_i<num_interp_orders; order_i++)\n",
+    "  } // END for(int order=1;order<=4;order*=2)\n",
     "\n",
+    "  // STEP 3: FREE THE MALLOCs\n",
     "  if(CCTK_MyProc(cctkGH)==0) {\n",
     "      // Step 1.e: Free memory for destination grids and interpolation output\n",
     "      free(points_x);\n",
@@ -1873,9 +1873,6 @@
     "      FREE_2D_GENERIC(CCTK_REAL,output_f,1,num_interp_points);\n",
     "  } // END if(CCTK_MyProc(cctkGH)==0)\n",
     "#undef FREE_2D_GENERIC\n",
-    "\n",
-    "  free(interp_orders_list);\n",
-    "\n",
     "} // END function\n"
    ]
   },
@@ -2349,7 +2346,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb to latex\n",
-      "[NbConvertApp] Writing 170784 bytes to Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
+      "[NbConvertApp] Writing 170407 bytes to Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
