--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -138,7 +138,6 @@
     "                              const CCTK_STRING input_array_names[1], CCTK_REAL *output_f[1]) {\n",
     "  DECLARE_CCTK_PARAMETERS; \n",
     "  CCTK_INT ierr;\n",
-    "printf(\"hey0\\n\");\n",
     "  const CCTK_INT NUM_INPUT_ARRAYS=1;\n",
     "  const CCTK_INT NUM_OUTPUT_ARRAYS=1;\n",
     "\n",
@@ -151,7 +150,6 @@
     "        \"can't get coordinate system handle for coordinate system \\\"%s\\\"!\",\n",
     "               coord_system);\n",
     "  }\n",
-    "printf(\"hey1\\n\");\n",
     "\n",
     "  const CCTK_INT operator_handle = CCTK_InterpHandle(interpolator_name);\n",
     "  if (operator_handle < 0)\n",
@@ -168,7 +166,6 @@
     "               \"bad interpolator parameter(s) \\\"%s\\\"!\",\n",
     "               interpolator_pars);\n",
     "  }\n",
-    "printf(\"hey2\\n\");\n",
     "  \n",
     "  CCTK_INT operand_indices[NUM_INPUT_ARRAYS]; //NUM_OUTPUT_ARRAYS + MAX_NUMBER_EXTRAS];\n",
     "  for(int i = 0 ; i < NUM_INPUT_ARRAYS  ; i++) {\n",
@@ -183,7 +180,6 @@
     "  }\n",
     "  Util_TableSetIntArray(param_table_handle, NUM_OUTPUT_ARRAYS, \n",
     "                        operation_codes, \"operation_codes\");\n",
-    "printf(\"hey3\\n\");\n",
     "\n",
     "  const void* interp_coords[3] \n",
     "    = { (const void *) point_x_temp,\n",
@@ -200,7 +196,6 @@
     "      exit(1);\n",
     "    }\n",
     "  }\n",
-    "printf(\"hey4\\n\");\n",
     "\n",
     "  CCTK_INT output_array_types[NUM_OUTPUT_ARRAYS];\n",
     "  for(int i = 0 ; i < NUM_OUTPUT_ARRAYS ; i++) {\n",
@@ -209,7 +204,6 @@
     "\n",
     "  void * output_arrays[NUM_OUTPUT_ARRAYS]\n",
     "    = { (void *) output_f[0] };\n",
-    "printf(\"hey5\\n\");\n",
     "\n",
     "  // actual interpolation call\n",
     "  ierr = CCTK_InterpGridArrays(cctkGH,\n",
@@ -225,7 +219,6 @@
     "                               NUM_OUTPUT_ARRAYS, // Number of output arrays\n",
     "                               output_array_types,\n",
     "                               output_arrays);\n",
-    "printf(\"hey6\\n\");\n",
     "\n",
     "  if (ierr<0) {\n",
     "    CCTK_WARN(1,\"interpolation screwed up\");\n",
@@ -1741,7 +1734,7 @@
     "extern void get_gf_name(const int InterpCounter,char gf_name[100]);\n",
     "\n",
     "#define FREE_2D_GENERIC(type,array,ni,nj) for(int cc = 0; cc < ni;cc++) free((void *)array[cc]); \\\n",
-    "  /**/                                                                  free((void *)array);\n",
+    "/**/                                                                    free((void *)array);\n",
     "\n",
     "void FM_validation(CCTK_ARGUMENTS)\n",
     "{\n",
@@ -1834,6 +1827,7 @@
     "            }\n",
     "            fclose(file);\n",
     "        } // END for(int order=1;order<=4;order*=2)\n",
+    "\n",
     "        // STEP 3: FREE THE MALLOCs for destination grids and interpolation output\n",
     "        free(points_x);\n",
     "        free(points_y);\n",
@@ -1852,7 +1846,7 @@
     "            Interpolate_to_dest_grid(cctkGH, 0, order,points_x,points_y,points_z, input_array_names, output_f);\n",
     "        } // END for(int order=1;order<=4;order*=2)\n",
     "      } // END if(CCTK_MyProc(cctkGH)...)\n",
-    "    \n",
+    "\n",
     "  } else if(strncmp(gf_name,\"IGM density primitive\",21) == 0 && CCTK_MyProc(cctkGH)==0) {\n",
     "      char filename[500];\n",
     "      sprintf (filename, \"%s/FMvalidation_points.asc\", out_dir);\n",
@@ -1879,9 +1873,7 @@
     "      } // END for(int ir=0;ir<sph_Nr;ir++) for...\n",
     "      fclose(file);\n",
     "      return;\n",
-    "  } else {\n",
-    "      return;\n",
-    "  }\n",
+    "  } // END if(strncmp(gf_name,\"Lorentz factor, times Valencia\",30) == 0)\n",
     "} // END function\n",
     "#undef FREE_2D_GENERIC"
    ]
