TOV_solver: Added a feature to allow the code to solve the TOV equations using different unit systems. Default is set to geometrized as to not disturb the behaviour of the function. There are probably still some place that is not performing the conversion correctly.

--- a/Tutorial-ADM_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_Initial_Data-TOV.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "Given this, the mass-energy $m(r)$ density is the solution to the ODE:\n",
     "$$\n",
-    "\\frac{m(r)}{dr} = 4\\pi r^2 \\rho(r)\n",
+    "\\frac{dm(r)}{dr} = 4\\pi r^2 \\rho(r)\n",
     "$$\n",
     "\n",
     "Thus the full set of ODEs that need to be solved is given by\n",
@@ -188,9 +188,36 @@
     "# rbar refers to the isotropic radius, and\n",
     "# R_Schw refers to the Schwarzschild radius\n",
     "\n",
-    "def TOV_rhs(r_Schw, y) : \n",
+    "def TOV_rhs(r_Schw, y, units=\"Geometrized\") : \n",
     "# In \\tilde units\n",
     "#\n",
+    "    # Set the units to be used in the solver\n",
+    "    # Default is Geometrized, as before\n",
+    "    if units==\"Geometrized\":\n",
+    "        G = 1.0 # Gravitational constant\n",
+    "        c = 1.0 # Speed of light\n",
+    "        c2 = c*c\n",
+    "        c4 = c2*c2\n",
+    "        G_over_c2 = G/c2\n",
+    "        G_over_c4 = G/c4\n",
+    "    elif units==\"cgs\":\n",
+    "        G  = 6.67430e-08 # cm^(3) g^(-1) s^(-2)) # Gravitational Constant\n",
+    "        c  = 2.99790e+10 # cm s^(-1)             # Speed of light\n",
+    "        c2 = c*c\n",
+    "        c4 = c2*c2\n",
+    "        G_over_c2 = G/c2\n",
+    "        G_over_c4 = G/c4\n",
+    "    elif units==\"SI\":\n",
+    "        G  = 6.67430e-11 # N m^2 kg^(-2) # Gravitational Constant\n",
+    "        c  = 2.99790e+08 # m/s           # Speed of light\n",
+    "        c2 = c*c\n",
+    "        c4 = c2*c2\n",
+    "        G_over_c2 = G/c2\n",
+    "        G_over_c4 = G/c4\n",
+    "    else:\n",
+    "        print(\"Unsupported unit system: \"+units+\".\")\n",
+    "        sys.exit(1)\n",
+    "    \n",
     "    P    = y[0]\n",
     "    m    = y[1]\n",
     "    nu   = y[2]\n",
@@ -212,17 +239,17 @@
     "    \n",
     "    if( r_Schw < 1e-4 or m <= 0.): \n",
     "        m = 4*math.pi/3. * rho*r_Schw**3\n",
-    "        dPdrSchw = -(rho + P)*(4.*math.pi/3.*r_Schw*rho + 4.*math.pi*r_Schw*P)/(1.-8.*math.pi*rho*r_Schw*r_Schw)\n",
-    "        drbardrSchw = 1./(1. - 8.*math.pi*rho*r_Schw*r_Schw)**0.5\n",
+    "        dPdrSchw = -(c2*rho + P)*(4.*math.pi/3.*r_Schw*rho*G_over_c2 + 4.*math.pi*r_Schw*P*G_over_c4)/(1.-8.*math.pi*rho*r_Schw*r_Schw*G_over_c2)\n",
+    "        drbardrSchw = 1./(1. - 8.*math.pi*rho*r_Schw*r_Schw*G_over_c2)**0.5\n",
     "    else:\n",
-    "        dPdrSchw = -(rho + P)*(m + 4.*math.pi*r_Schw**3*P)/(r_Schw*r_Schw*(1.-2.*m/r_Schw))\n",
-    "        drbardrSchw = 1./(1. - 2.*m/r_Schw)**0.5*rbar/r_Schw\n",
+    "        dPdrSchw = -(c2*rho + P)*(m*G_over_c2 + 4.*math.pi*r_Schw**3*P*G_over_c4)/(r_Schw*r_Schw*(1.-2.*m/r_Schw*G_over_c2))\n",
+    "        drbardrSchw = 1./(1. - 2.*m/r_Schw*G_over_c2)**0.5*rbar/r_Schw\n",
     "    \n",
     "    dmdrSchw  =  4.*math.pi*r_Schw*r_Schw*rho\n",
     "    dnudrSchw = -2./(P + rho)*dPdrSchw\n",
     "    return [dPdrSchw, dmdrSchw, dnudrSchw, drbardrSchw]\n",
     "\n",
-    "def integrateStar( eos, P, dumpData = False):\n",
+    "def integrateStar( eos, P, dumpData = False, units=\"Geometrized\"):\n",
     "    integrator = si.ode(TOV_rhs).set_integrator('dop853')\n",
     "    y0 = [P, 0., 0., 0.]\n",
     "    integrator.set_initial_value(y0,0.)\n",
@@ -241,7 +268,7 @@
     "        P, m, nu, rbar = integrator.integrate(r_Schw + dr_Schw)\n",
     "        r_Schw = integrator.t\n",
     "\n",
-    "        dPdrSchw, dmdrSchw, dnudrSchw, drbardrSchw = TOV_rhs( r_Schw+dr_Schw, [P,m,nu,rbar])\n",
+    "        dPdrSchw, dmdrSchw, dnudrSchw, drbardrSchw = TOV_rhs( r_Schw+dr_Schw, [P,m,nu,rbar], units=units)\n",
     "        dr_Schw = 0.1*min(abs(P/dPdrSchw), abs(m/dmdrSchw))\n",
     "        dr_Schw = min(dr_Schw, 1e-2)\n",
     "        PArr.append(P)\n",
@@ -260,7 +287,7 @@
     "    nuArr_np = np.array(nuArr)\n",
     "    # Rescale solution to nu so that it satisfies BC: exp(nu(R))=exp(nutilde-nu(r=R)) * (1 - 2m(R)/R)\n",
     "    #   Thus, nu(R) = (nutilde - nu(r=R)) + log(1 - 2*m(R)/R)\n",
-    "    nuArr_np = nuArr_np - nuArr_np[-1] + math.log(1.-2.*mArr[-1]/r_SchwArr[-1])\n",
+    "    nuArr_np = nuArr_np - nuArr_np[-1] + math.log(1.-2.*mArr[-1]*G_over_c2/r_SchwArr[-1])\n",
     "\n",
     "    r_SchwArrExtend_np = 10.**(np.arange(0.01,5.0,0.01))*r_SchwArr[-1]\n",
     "    \n",
@@ -345,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -365,9 +392,10 @@
     "\n",
     "import TOV.TOV_Solver as TOV\n",
     "TOV.TOV_Solver(eos,\n",
-    "               outfile=\"outputTOVpolytrope-validation.txt\", \\\n",
-    "               rho_baryon_central=0.129285,                 \\\n",
-    "               verbose = True)\n",
+    "               outfile=\"outputTOVpolytrope-validation.txt\",\n",
+    "               rho_baryon_central=0.129285,\n",
+    "               verbose = True,\n",
+    "               unit_system = \"Geometrized\")\n",
     "\n",
     "if filecmp.cmp('outputTOVpolytrope.txt',\n",
     "               'outputTOVpolytrope-validation.txt') == False:\n",
@@ -400,7 +428,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-TOV.ipynb to latex\n",
-      "[NbConvertApp] Writing 46603 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
+      "[NbConvertApp] Writing 52363 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
